# Real-Time-E-commerce-Recommendation-Platform-using-Lambda-Architecture

./: .env  docker-compose.yml  main.py  pyproject.toml  requirements.txt  testing.py
batch_layer/config/: airflow.cfg
config/: airflow.cfg
data_generator/: clickstream_summary.csv  ecommerce_data.py  events_stream.jsonl  user_profiles.csv  user_profiles.json
data_generator/data_samples/: clickstream_summary.csv  events_stream.jsonl  user_profiles.csv  user_profiles.json
data_generator/ecommerce_data/: clickstream_summary.csv  events_stream.jsonl  product_catalog.json  user_profiles.csv  user_profiles.json
data_validation/: clear  user_validation.py
ecommerce_dbt/ecommerce_project/.dbt/: .user.yml  profiles.yml
openmetadata-docker/: docker-compose.yml
openmetadata-docker/docker-volume/db-data-postgres/: postmaster.pid
openmetadata-docker/docker-volume/db-data-postgres/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2841
openmetadata-docker/docker-volume/db-data-postgres/base/16384/: 1247  1247_vm  1249  1249_fsm  1249_vm  1255  1259  1259_fsm  1259_vm  16390  16391  16398  16400  16400_fsm  16400_vm  16404  16405  16406  16409  16415  16418  16419  16424  16446  16773  16782  16911  16912  16916  16992  16993  16997  16998  16999  17001  17003  17011  17012  17027  17038  (+967 more)
openmetadata-docker/docker-volume/db-data-postgres/global/: 1214  1214_fsm  1214_vm  1232  1233  1260  pg_control  pg_internal.init
openmetadata-docker/docker-volume/db-data-postgres/pg_xact/: 0000
streaming_layer/: Dockerfile.spark
(+214 files in other folders)
