[project]
name = "real-time-e-commerce-recommendation-platform-using-lambda-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.3.0",
    "confluent-kafka>=2.15.0",
    "dbt-core>=1.11.12",
    "dbt-postgres>=1.10.2",
]
