

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-e-commerce-recommendation-platform-using-lambda-architecture"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=3.3.0",
    "confluent-kafka>=2.15.0",
    "dbt-core>=1.11.12",
    "dbt-postgres>=1.10.2",
]

[tool.setuptools.packages.find]
include = ["data_generator*", "data_validation*"]
